maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:2: error: Missing closing brace `}' assumed here
var virage = 0
^Escaper:3: error: expected start of definition
override def run() {
         ^Escaper:19: error: expected class or object definition
def WallG():Boolean={
^Escaper:32: error: expected class or object definition
def WallD():Boolean={
^Escaper:45: error: expected class or object definition
def suivre2(){
^Escaper:65: error: expected class or object definition
def suivre(){
^